# nanovision

./: .gitattributes  .gitignore  .reposcribe_ignore  LICENSE  README.md  adlercov.yaml  example_patch_comment.md  generate_reports.py  go.mod  go.sum  grammars.yaml  nanovision.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  pages.yml  pr_checks.yml  self_report.yml
TODOs/: Components.md  HistoryCoverage.md  WatchForChanges.md
Testprojects/: generate_reports.py
Testprojects/Go/: coverage.html  go.mod
analyzer/: analyzer.go
analyzer/cpp/: analyzer.go
analyzer/go/: analyzer.go
cmd/: main.go
coverage-report/: Summary.txt  custom-azurepipelines_dark.css  index.html  lcov.info  main.js  report.css  reportgenerator.combined.js  test_project_gocalculator.html  test_project_gocalculator_2.html
demo_projects/: generate_reports.py
demo_projects/cpp/: README.md  gen-cobertura.ps1  gen-gcov.ps1  gen-html.ps1  setup.ps1
demo_projects/cpp/project/: .clang-format  .gitignore  CMakeLists.txt  output_report.txt
demo_projects/cpp/project/src/: advanced_calculator.cpp  advanced_calculator.h  calculator.cpp  calculator.h
demo_projects/cpp/project/src/utils/: math_utils.cpp  math_utils.h
demo_projects/cpp/project/tests/: advanced_calculator_test.cpp  calculator_test.cpp  math_utils_test.cpp
demo_projects/csharp/: gen-cobertura.ps1  gen-lcov.ps1  gen-opencover.ps1  setup.ps1
demo_projects/go/: coverage.cobertura.xml  coverage.out  gen-gocover.ps1
docs/: README.md  mkdocs.yml  requirements.txt
docs/docs/: contributing.md  getting-started.md  index.md
filereader/: default_reader.go  filereader.go
filesystem/: filesystem.go
filtering/: filter.go  filter_test.go
logging/: logging.go  logging_test.go
scripts/: build.py  e2e_test.py  test.py
src/: go.mod  go.sum
tools/: README.md  tsfetch.go
ui/: README.md  biome.json  components.json  details.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.base.ts  vite.config.details.ts  vite.config.index.ts  vite.config.modern.ts  vite.config.ts
(+345 files in other folders)
